<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editOrderNumber"
            android:hint="@string/title_order_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_from_date"
        android:textStyle="bold"/>

    <TextView
        style="@style/Base.Widget.AppCompat.Spinner"
        android:id="@+id/textFromDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_to_date"
        android:textStyle="bold"/>

    <TextView
        style="@style/Base.Widget.AppCompat.Spinner"
        android:id="@+id/textToDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_shipper"
        android:textStyle="bold"/>

    <TextView
        style="@style/Base.Widget.AppCompat.Spinner"
        android:id="@+id/textShipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title_seller"
    android:textStyle="bold"/>

    <TextView
        style="@style/Base.Widget.AppCompat.Spinner"
        android:id="@+id/textSeller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_format_file"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/rgChooseFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbPDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_pdf"
            />

        <RadioButton
            android:id="@+id/rbXLS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format_xls"
            android:checked="true"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbPrinted"
        android:text="@string/title_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cbPrintedTime"
        android:text="@string/title_printing_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_button_export"/>

</LinearLayout>