<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:id="@+id/reportOptionLayout">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button_export"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/ic_menu_file_chart"
        android:tint="#fff"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView style="@style/WizardPageTitle"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editOrderNumber"
                        android:hint="@string/title_order_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_from_date"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/Base.Widget.AppCompat.Spinner"
                    android:id="@+id/textFromDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_to_date"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/Base.Widget.AppCompat.Spinner"
                    android:id="@+id/textToDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_shipper"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/Base.Widget.AppCompat.Spinner"
                    android:id="@+id/textShipper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/empty_string"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_seller"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/Base.Widget.AppCompat.Spinner"
                    android:id="@+id/textSeller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/empty_string"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_format_file"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/rgChooseFormat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbPDF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/format_pdf"
                        />

                    <RadioButton
                        android:id="@+id/rbXLS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/format_xls"
                        android:checked="true"/>
                </RadioGroup>

                <CheckBox
                    android:id="@+id/cbPrinted"
                    android:text="@string/title_print_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/cbPrintedTime"
                    android:text="@string/title_printing_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>






</android.support.design.widget.CoordinatorLayout>