<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:id="@+id/reportOptionLayout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/ic_menu_file_chart"
        android:text="@string/title_button_export"
        android:tint="#fff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView style="@style/WizardPageTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_from_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textFromDate"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_to_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textToDate"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_status"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textStatus"
                style="@style/Base.Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_format_file"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/rgChooseFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbPDF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/format_pdf"
                    />

                <RadioButton
                    android:id="@+id/rbXLS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/format_xls"/>
            </RadioGroup>


        </LinearLayout>


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>