<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="16dp">


    <View
        android:id="@+id/screenDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent"
        android:layout_centerInParent="true"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/btnLogin"
        android:layout_above="@id/screenDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"/>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_above="@id/screenDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnLogin">

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:nextFocusDown="@string/btn_login"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutEditPassword">

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_username"
            android:maxLines="1"
            android:text="@string/default_username"
            android:nextFocusDown="@id/editPassword"/>
        <requestFocus/>


    </android.support.design.widget.TextInputLayout>



</RelativeLayout>