<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true">



    <LinearLayout
        android:id="@+id/orderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/colorPrimary"
        android:clipToPadding="true"
        android:elevation="6dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:transitionName="@string/transition_order">

        <TextView
            android:id="@+id/textOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textShipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_return_product"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <TextView
            style="@style/Widget.AppCompat.Spinner"
            android:id="@+id/spReasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff"
            android:textColor="#fff"
            android:text="@string/empty_string"
            android:layout_marginTop="8dp"
            android:paddingEnd="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/editReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="16sp"
            android:hint="@string/edit_return_product_reason"
            android:backgroundTint="#fff"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="#fff"
            android:text="@string/title_button_submit"
            android:id="@+id/btnSubmit"/>


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_below="@id/orderContainer"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.v7.widget.CardView>


</RelativeLayout>